# linopt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: static.yml
docs/: Doxyfile  index.html
docs/html/: DiskMatrix_8h.html  DiskMatrix_8h_source.html  Matrix_8h.html  Matrix_8h_source.html  Server_8h_source.html  SparseDiskMatrix_8h_source.html  annotated.html  classDiskMatrix-members.html  classDiskMatrix.html  classServer-members.html  classServer.html  classSparseDiskMatrix-members.html  classSparseDiskMatrix.html  classes.html  classlinopt_1_1inmemory_1_1Matrix-members.html  classlinopt_1_1inmemory_1_1Matrix.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_0cc19bc8d093e02a15fcd80afede4f38.html  dir_171063ca2b6d8df6d9147a9ad3041fe6.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_31f1a79d6902317d51177998ddddaa64.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8c1983457434dfce19fd676201b6729c.html  dir_8cb1d0c334a4aaff5900f56ff5b22be2.html  dir_981a56cc3403dd861ee98261c4dc1493.html  dir_98348035c6b343527355a3ff27935e99.html  dir_9f49536c3a0d064ec663af7cfc7710db.html  dir_c34b07d6f5ecfea602d99dba9abf210c.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  index.html  mathutils_8h_source.html  md__2home_2mk8bk_2programming_2cpp_2projects_2linopt_2TODO.html  menudata.js  pages.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_1.js  related_0.js  searchdata.js
include/: mathutils.h
src/: mathutils.cpp  start.cpp
src/disk/io/: DiskMatrix.cpp  DiskMatrix.h
src/inmemory/matrix/: Matrix.h  Matrix.tpp
src/server/: Server.h
tests/: CMakeLists.txt  mathutil_test_factorial.cpp
tests/src/disk/matrix/: disk_matrix_1_unittest.cpp
tests/src/inmemory/matrix/: matrix_1_unittest.cpp
